--- a/examples/vl53l0x/index.html
+++ b/examples/vl53l0x/index.html
@@ -7,9 +7,8 @@
       content="width=device-width, user-scalable=no, initial-scale=1"
     />
     <title>i2c-VL53L0X</title>
-    <script src="node_modules/@chirimen-raspi/polyfill/polyfill.js"></script>
-    <script src="node_modules/@chirimen/vl53l0x/vl53l0x.js"></script>
-    <script src="./main.js" defer></script>
+    <script src="https://r.chirimen.org/polyfill.js"></script>
+    <script src="./main.js" type="module"></script>
     <style>
       table,
       p {
