ドライバからデバックコード削除

--- a/examples/s11059/index.html
+++ b/examples/s11059/index.html
@@ -8,9 +8,8 @@
       content="width=device-width, user-scalable=no, initial-scale=1"
     />
     <title>i2c-S11059</title>
-    <script src="node_modules/@chirimen-raspi/polyfill/polyfill.js"></script>
-    <script src="node_modules/@chirimen-raspi/chirimen-driver-i2c-s11059/S11059.js"></script>
-    <script src="./main.js" defer></script>
+    <script src="https://r.chirimen.org/polyfill.js"></script>
+    <script src="./main.js" type="module"></script>
     <style>
       #color {
         display: inline-block;
