--- a/examples/ads1015/index.html
+++ b/examples/ads1015/index.html
@@ -8,9 +8,8 @@
       content="width=device-width, user-scalable=no, initial-scale=1"
     />
     <title>i2c-ADS1015</title>
-    <script src="node_modules/@chirimen-raspi/polyfill/polyfill.js"></script>
-    <script src="node_modules/@chirimen-raspi/chirimen-driver-i2c-ads1015/ADS1015.js"></script>
-    <script src="./main.js" defer></script>
+    <script src="https://r.chirimen.org/polyfill.js"></script>
+    <script src="./main.js" type="module"></script>
     <style>
       p {
         color: blue;
