--- a/examples/adt7410/index.html
+++ b/examples/adt7410/index.html
@@ -7,9 +7,8 @@
       content="width=device-width, user-scalable=no, initial-scale=1"
     />
     <title>i2c-ADT7410</title>
-    <script src="node_modules/@chirimen-raspi/polyfill/polyfill.js"></script>
-    <script src="node_modules/@chirimen-raspi/chirimen-driver-i2c-adt7410/ADT7410.js"></script>
-    <script src="./main.js" defer></script>
+    <script src="https://r.chirimen.org/polyfill.js"></script>
+    <script src="./main.js" type="module"></script>
     <style>
       p {
         color: blue;
