--- a/examples/tsl2561/index.html
+++ b/examples/tsl2561/index.html
@@ -7,9 +7,8 @@
       content="width=device-width, user-scalable=no, initial-scale=1"
     />
     <title>Grove touch sensor</title>
-    <script src="node_modules/@chirimen-raspi/polyfill/polyfill.js"></script>
-    <script src="node_modules/@chirimen-raspi/chirimen-driver-i2c-grove-light/GROVELIGHT.js"></script>
-    <script src="./main.js" defer></script>
+    <script src="https://r.chirimen.org/polyfill.js"></script>
+    <script src="./main.js" type="module"></script>
     <style>
       p {
         color: blue;
@@ -26,13 +25,11 @@
   </head>
 
   <body>
-    <P
-      ><a
-        href="http://wiki.seeed.cc/Grove-Digital_Light_Sensor/"
-        target="_blank"
+    <p>
+      <a href="http://wiki.seeed.cc/Grove-Digital_Light_Sensor/" target="_blank"
         >Grove - Digital Light Sensor</a
-      ></P
-    >
+      >
+    </p>
     <img src="./schematic.png" height="400px" />
     <p id="head">TEST</p>
   </body>
