--- a/examples/ssd1308/index.html
+++ b/examples/ssd1308/index.html
@@ -7,9 +7,8 @@
       content="width=device-width, user-scalable=no, initial-scale=1"
     />
     <title>oled-display</title>
-    <script src="node_modules/@chirimen-raspi/polyfill/polyfill.js"></script>
-    <script src="node_modules/@chirimen-raspi/chirimen-driver-i2c-grove-oled-display/OledDisplay.js"></script>
-    <script src="./main.js" defer></script>
+    <script src="https://r.chirimen.org/polyfill.js"></script>
+    <script src="./main.js" type="module"></script>
     <style>
       p {
         color: blue;
@@ -26,13 +25,13 @@
   </head>
 
   <body>
-    <P
-      ><a
+    <p>
+      <a
         href="https://www.seeedstudio.com/Grove-OLED-Display-0.96%26quot%3B-p-781.html"
         target="_blank"
         >Grove OLED Display</a
-      ></P
-    >
+      >
+    </p>
     <img src="./schematic.png" height="400px" />
     <p id="head">TEST</p>
   </body>
