--- a/examples/gp2y0e03/index.html
+++ b/examples/gp2y0e03/index.html
@@ -8,9 +8,8 @@
       content="width=device-width, user-scalable=no, initial-scale=1"
     />
     <title>i2c-GP2Y0E03</title>
-    <script src="node_modules/@chirimen-raspi/polyfill/polyfill.js"></script>
-    <script src="node_modules/@chirimen-raspi/chirimen-driver-i2c-gp2y0e03/GP2Y0E03.js"></script>
-    <script src="./main.js" defer></script>
+    <script src="https://r.chirimen.org/polyfill.js"></script>
+    <script src="./main.js" type="module"></script>
     <style>
       p {
         color: blue;
@@ -27,11 +26,11 @@
   </head>
 
   <body>
-    <P
-      ><a href="http://akizukidenshi.com/catalog/g/gI-07547/" target="_blank"
+    <p>
+      <a href="http://akizukidenshi.com/catalog/g/gI-07547/" target="_blank"
         >Distance Measuring Sensor(GP2Y0E03)</a
-      ></P
-    >
+      >
+    </p>
     <img src="./schematic.png" height="400px" />
     <p id="distance">init</p>
   </body>
