--- a/examples/pca9685/index.html
+++ b/examples/pca9685/index.html
@@ -7,9 +7,8 @@
       content="width=device-width, user-scalable=no, initial-scale=1"
     />
     <title>i2c-PCA9685</title>
-    <script src="node_modules/@chirimen-raspi/polyfill/polyfill.js"></script>
-    <script src="node_modules/@chirimen-raspi/chirimen-driver-i2c-pca9685/PCA9685.js"></script>
-    <script src="./main.js" defer></script>
+    <script src="https://r.chirimen.org/polyfill.js"></script>
+    <script src="./main.js" type="module"></script>
     <style>
       p {
         color: blue;
@@ -26,17 +25,17 @@
   </head>
 
   <body>
-    <P
-      ><a href="https://www.adafruit.com/product/815" target="_blank"
+    <p>
+      <a href="https://www.adafruit.com/product/815" target="_blank"
         >PCA9685-Board:[ADAFRUIT 16-CHANNEL 12-BIT PWM/SERVO DRIVER - I2C
         INTERFACE]</a
-      ></P
-    >
-    <P
-      ><a href="http://akizukidenshi.com/catalog/g/gM-08761/" target="_blank"
+      >
+    </p>
+    <p>
+      <a href="http://akizukidenshi.com/catalog/g/gM-08761/" target="_blank"
         >Servo Motor:[SG90]</a
-      ></P
-    >
+      >
+    </p>
     <img src="./schematic.png" height="400px" />
     <p id="head">TEST</p>
   </body>
