Change the way to display value.

--- a/examples/vl53l1x/index.html
+++ b/examples/vl53l1x/index.html
@@ -30,7 +30,6 @@
       <a>VL53L1X</a>
     </p>
     <img src="./schematic.png" height="400px" />
-    <p id="mode">initializing...</p>
-    <p id="value"></p>
+    <p id="value">initializing...</p>
   </body>
 </html>
