Fix button in html

--- a/examples/pcf8591/index.html
+++ b/examples/pcf8591/index.html
@@ -33,7 +33,7 @@
     <p id="value">initializing...</p>
     <p>
       DAC Voltage (Range: 0V - 3.3V)<br />
-      <input type="text" name="voltage" id="voltage" value="3.3" />V
+      <input type="number" name="voltage" id="voltage" value="3.3" />V
       <input type="button" value="Set" id="setVoltage" />
     </p>
   </body>
