--- a/examples/pcf8591/index.html
+++ b/examples/pcf8591/index.html
@@ -30,11 +30,18 @@
       <a>PCF8591</a>
     </p>
     <img src="./schematic.png" height="400px" />
-    <p id="value">initializing...</p>
+    <p id="adcDisplay">initializing...</p>
     <p>
       DAC Voltage (Range: 0V - 3.3V)<br />
-      <input type="number" name="voltage" id="voltage" value="3.3" />V
-      <input type="button" value="Set" id="setVoltage" />
+      <input
+        type="number"
+        id="dacVoltage"
+        max="3.3"
+        min="0"
+        step="0.1"
+        value="3.3"
+      />V
+      <input type="button" value="Set DAC Voltage" id="dacSetButton" />
     </p>
   </body>
 </html>
