Make the browser example and Node.js one

--- a/examples/ssd1306/index.html
+++ b/examples/ssd1306/index.html
@@ -26,14 +26,12 @@
   </head>
 
   <body>
-    <P
-      ><a
-        href="https://www.amazon.co.jp/s?k=SSD1306"
-        target="_blank"
-        >SSD1306  128x64px OLED Display</a
-      ></P
-    >
+    <p>
+      <a href="https://www.amazon.co.jp/s?k=SSD1306" target="_blank"
+        >SSD1306 128x64px OLED Display</a
+      >
+    </p>
     <img src="./schematic.png" height="400px" />
-    <p id="head">TEST</p>
+    <p id="status">initializing...</p>
   </body>
 </html>
