Add CCS811 examples and rename mjs -> js

--- a/microbit-examples/ccs811/index.html
+++ b/microbit-examples/ccs811/index.html
@@ -7,7 +7,11 @@
 <title></title>
 </head>
 
+<!--
 <script type="text/javascript" src="https://chirimen.org/chirimen-micro-bit/polyfill/microBitBLE.js"></script>
+<script type="text/javascript" src="../../polyfill/microBitBLE.js"></script>
+-->
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@chirimen/microbit"></script>
 <script type="module" src="./main.js"></script>
 
 <body>
